--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <main class="main">
         <div class="container">
-            <h1 class="title">Photoblog</h1>
+            <h1 hidden class="title">Photoblog</h1>
             <div class="wrap">
                 <ul class="card-list">
                     <li class="card-item">
@@ -66,7 +66,9 @@
                         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente saepe porro, a deserunt, exercitationem placeat voluptates veniam, amet molestiae et tempora iusto! Aliquid debitis soluta doloremque maiores. Ex, fugit tempore.</p>
                     </li>
                 </ul>
-                <button class="button" type="button">Load more</button>
+                <div class="wrap-button">
+                    <button class="button" type="button">Load more</button>
+                </div>
             </div>
         </div>
     </main>
